packages/packages.css
main {
  padding-top: 32px;
}

.background {
  background: url("plans-background.jpg");
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.packages {
  margin: 16px 0;
  border: 3px solid #0e4f1f;
  border-left: none;
  width: 60%;
  background: rgba(130, 229, 213, 0.32);
}

.background {
  background: url("plans-background.jpg");
}

.packages a {
  text-decoration: none;
  color: black;
  display: block;
  padding: 32px;
}

.package-sub__heading {
  color: #979797;
}

.packages_p {
  border: 1px solid #0e4f1f;
  padding: 16px;
  font-size: 20px;
  color: #0e4f1f;
  background: white;
}

.clearfix {
  clear: both;
}

#plus {
  background: rgba(213, 255, 220, 0.95);
}

#free {
  background: rgba(234, 252, 237, 0.95);
  float: right;
  border-left: 4px solid #0e4f1f;
  border-right: none;
  text-align: right;
}

#premium {
  background: rgba(14, 79, 31, 0.95);
}

#premium .package-sub__heading {
  color: #bbb;
}

.packages-premium {
  background: rgb(16, 88, 16);
}

.packages-premium a h1 {
  color: white;
}

.packages:hover,
.packages:active {
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
  /*border-color: #ff5454 !important;*/
  border-color: #ff5454;
}

#free:hover,
#free:active {
  border-color: #ff5454;
}

